testsuite/tests/annotations/should_fail/annfail10.stderr

annfail10.hs:9:1: error:
    • Ambiguous type variable ‘p0’ arising from an annotation
      prevents the constraint ‘(Data.Data.Data p0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘p0’ should be.
      These potential instances exist:
        instance (Data.Data.Data a, Data.Data.Data b) =>
                 Data.Data.Data (Either a b)
          -- Defined in ‘Data.Data’
        instance Data.Data.Data Ordering -- Defined in ‘Data.Data’
        instance Data.Data.Data Integer -- Defined in ‘Data.Data’
        ...plus 15 others
        ...plus 46 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the annotation: {-# ANN f 1 #-}

annfail10.hs:9:11: error:
    • Ambiguous type variable ‘p0’ arising from the literal ‘1’
      prevents the constraint ‘(Num p0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘p0’ should be.
      These potential instances exist:
        instance Num Integer -- Defined in ‘GHC.Num’
        instance Num Double -- Defined in ‘GHC.Float’
        instance Num Float -- Defined in ‘GHC.Float’
        ...plus two others
        ...plus 18 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the annotation: {-# ANN f 1 #-}
